@@ -83,6 +83,11 @@ Information about older versions may be found <a href="http://pwsafe.org/history
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3510590);return false;">3510590</a></td>
+<td>Password History is now correctly repaired if found in error during
+the automatic Validate on database open.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3508891);return false;">3508891</a></td>
 <td>Editing an entry's Notes using an external editor no longer adds blank lines
 and fully supports non-Latin characters.</td>
